--- a/blog-info.html
+++ b/blog-info.html
@@ -24,13 +24,13 @@
                             <div class="ms-4">
                                 <a href="mailto:plan@slsalah.com">
                                     <span>plan@slsalah.com</span>
-                                    <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid">
+                                    <img src="imgs/icons/dark-mail.svg" alt="mail-icon" class="img-fluid">
                                 </a>
                             </div>
                             <div>
                                 <a href="tel:+966555881764">
                                     <span dir="ltr">+966 555 88 1764</span>
-                                    <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid">
+                                    <img src="imgs/icons/dark-phone.svg" alt="phone-icon" class="img-fluid">
                                 </a>
                             </div>
                         </div>
@@ -40,16 +40,16 @@
                                 <i class="fa fa-whatsapp"></i>
                             </a>
                             <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
-                                <i class="fa fa-linkedin-square"></i>
+                                <img src="imgs/icons/dark-Linked-In.svg" alt="">
                             </a>
                             <a href="https://twitter.com/slsalah_sa" target="_blank">
-                                <i class="fa fa-twitter"></i>
+                                <img src="imgs/icons/dark-icons8-twitterx 1.svg" alt="">
                             </a>
                             <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
-                                <i class="fa fa-facebook"></i>
+                                <img src="imgs/icons/dark-Facebook.svg" alt="">
                             </a>
                             <a href="https://www.instagram.com/slsalah_sa" target="_blank">
-                                <i class="fa fa-instagram"></i>
+                                <img src="imgs/icons/dark-Instagram.svg" alt="">
                             </a>
                         </div>
                     </div>
@@ -60,11 +60,11 @@
                         aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="nav-link d-none d-lg-block" href="#testimonial">
-                        <button class="ask-request">اطلب استشارة</button>
+                    <a class="nav-link d-none d-lg-block" href="index.html#testimonial">
+                        <button class="ask-request">اطلب استشارّة</button>
                     </a>
                     <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
-                        <ul class="navbar-nav text-center py-4">
+                        <ul class="navbar-nav text-center py-4 align-items-center">
                             <a class="navbar-brand d-block d-lg-none" href="index.html">
                                 <img src="./imgs/logo.png" alt="logo">
                             </a>
@@ -76,7 +76,7 @@
                                 <a class="nav-link" href="who-we-ara.html">من نحن</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown"
+                                <a class="nav-link-2" href="#" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
                                     الخدمات
                                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
@@ -84,7 +84,7 @@
                                         <g id="Group">
                                             <path id="Vector"
                                                 d="M8.19384 8.78145L11.4938 5.48145L12.4365 6.42411L8.19384 10.6668L3.95117 6.42411L4.89384 5.48145L8.19384 8.78145Z"
-                                                fill="#E1E1E1" />
+                                                fill="#333" />
                                         </g>
                                     </svg>
 
@@ -150,8 +150,8 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="contact-us.html">اتصل بنا</a>
                             </li>
-                            <a class="nav-link d-block d-lg-none" href="#testimonial">
-                                <button class="ask-request">اطلب استشارة</button>
+                            <a class="nav-link d-block d-lg-none" href="index.html#testimonial">
+                                <button class="ask-request">اطلب استشارّة</button>
                             </a>
                             <div class="text-center social-media-icons d-block d-md-none">
                                 <img src="imgs/icons/Instagram.svg" alt="Instagram-icon" class="img-fluid">
@@ -163,18 +163,15 @@
                         </ul>
                     </div>
                     <a class="navbar-brand d-none d-lg-block" href="index.html">
-                        <img src="./imgs/logo.png" alt="logo">
+                        <img src="./imgs/icons/dark-logo.png" alt="logo">
                     </a>
                 </nav>
             </div>
         </div>
-        <div class="headerContent">
-            <h1>معرض الأعمال</h1>
-        </div>
     </section>
 
     <section id="info-gallery">
-        <div class="container">
+        <div class="info-gallery-container">
             <h1 class="text-center">ماذا تعرف عن دراسة الجدوى؟</h1>
             <div class="row gy-5 justify-content-between first-row">
                 <div class="first-row-blog gap-5">
@@ -196,7 +193,7 @@
                     <br />
                     لأنها هى التي تقدم لصاحب المشروع كافة المعلومات التي يحتاج لها، لكي تجيب عن تساؤلات كثيرة من شأنها
                     أن يعرف هل هذا
-                    المشروع سوف ينجح أم لا.
+                    المشروع سوف ينجح أم لا. <br>
                     ونظراً لأن دراسات الجدوى مكلفة الثمن وخاصة ً لمن يبدأ في مشروع جديد صغير، وحرصاً من موقع مقال على
                     تقديم كل ما هو جديد
                     ومفيد.
@@ -217,10 +214,11 @@
                         العملاء.</li>
                     <li>بالإضافة إلى فهم كافة الأساليب التي يتبعها المنافسين بين بعضهم البعض.</li>
                     <li>معرفة كل ما يتعلق بالخدمة أو المنتج من جودة وأسلوب في التوزيع.</li>
-                    <li>كذلك التعرف على كيفية التسويق له وما هى الأسعار التي تم وضعها من المنافسين ؟</li>
+                    <li>كذلك التعرف على كيفية التسويق له وما هى الأسعار التي تم وضعها من <br
+                            class="d-none-d-lg-block">المنافسين ؟</li>
                 </ul>
                 <p>قد يهمك : كيفية حساب الربح والخسارة لمشروع صغير</p>
-                <img src="imgs/blog-2.webp" class="img-fluid col-12" alt="img">
+                <img src="imgs/info-blog-img.png" class="img-fluid col-12" alt="img">
                 <p class="mt-5 mb-3">ثانياً – دراسة النواحي الفنية للمشروع</p>
                 <ul>
                     <li>وتتم باتباع خطوات معينة وهي كما يأتي.</li>
@@ -245,7 +243,7 @@
                     <li>وخاصة فيما يرتبط بالرسوم المدفوعة فى استخراج الأوراق الرسمية والتراخيص.</li>
                     <li>وكذلك الإستشارات وهي مصروفات لن يتم إسترجاعها بعد ذلك.</li>
                 </ul>
-                <p>تكاليف خاصة برأس المال</p>
+                <p class="my-5">تكاليف خاصة برأس المال</p>
                 <p class="m-0">
                     وتشمل المكان الذي سوف يقام عليها المشروع والمعدات التي سوف تقوم بالإنتاج. <br>
                     كما إنها هي مصروفات يمكن استرجاعها إذا تم بيعها مرة أخرى. <br>
@@ -259,7 +257,7 @@
                     <li>كما إنها هى لا تتغير حتى وإن كان المشروع قد زاد في الإنتاج.</li>
                     <li>ومثال على ذلك إيجار المكان وكذلك الصيانة الدورية، بالإضافة إلى رواتب العمال.</li>
                 </ul>
-                <p class="mb-0">تكاليف متغيرة</p>
+                <p class="my-5">تكاليف متغيرة</p>
                 <ul>
                     <li>وهى مرتبطة بالنسبة التي يقوم بها المشروع بالإنتاج.</li>
                     <li>تلك التي تعد متغيرة حسب الحجم الذي يتم إنتاجه من السلعة.</li>
