--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 
 <head>
     <meta charset="UTF-8">
@@ -9,9 +9,6 @@
         integrity="sha512-oAvZuuYVzkcTc2dH5z1ZJup5OmSQ000qlfRvuoTTiyTBjwX1faoyearj8KdMq0LgsBTHMrRuMek7s+CxF8yE+w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&family=Lato:wght@100;300;400;700;900&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 
@@ -34,11 +31,11 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <img src="imgs/home-page-1.webp" alt="img" class="img-fluid">
-                <h1>من المملكة موطن الريادة ورمز الطموح</h1>
+                <h1>من المملكة موطن الرّيادة ورمز الطموح</h1>
             </div>
             <div class="swiper-slide">
                 <img src="imgs/home-page-2.webp" alt="img" class="img-fluid">
-                <h1>إلى رائدي الأعمال <br class="d-none d-lg-block"> أصحاب الرؤى وفكر التطوير</h1>
+                <h1>إلى رائدي الأعمال <br class="d-none d-lg-block"> أصحاب الرّؤى وفكر التطوير</h1>
             </div>
             <div class="swiper-slide">
                 <img src="imgs/home-page-3.webp" alt="img" class="img-fluid">
@@ -98,7 +95,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <a class="nav-link d-none d-lg-block" href="#testimonial">
-                    <button class="ask-request">اطلب استشارة</button>
+                    <button class="ask-request">اطلب استشارّة</button>
                 </a>
                 <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                     <ul class="navbar-nav text-center py-4">
@@ -180,7 +177,7 @@
                             <a class="nav-link" href="contact-us.html">اتصل بنا</a>
                         </li>
                         <a class="nav-link d-block d-lg-none" href="#testimonial">
-                            <button class="ask-request">اطلب استشارة</button>
+                            <button class="ask-request">اطلب استشارّة</button>
                         </a>
                         <div
                             class="col-md-6 text-start social-media-icons d-flex d-md-none justify-content-center align-items-center">
@@ -1402,7 +1399,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
-                                اطلب استشارة
+                                اطلب استشارّة
                             </button>
                         </div>
                     </div>
@@ -1416,7 +1413,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
-                                اطلب استشارة
+                                اطلب استشارّة
                             </button>
                         </div>
                     </div>
@@ -1432,7 +1429,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
-                                اطلب استشارة
+                                اطلب استشارّة
                             </button>
                         </div>
                     </div>
@@ -1446,7 +1443,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
-                                اطلب استشارة
+                                اطلب استشارّة
                             </button>
                         </div>
                     </div>
@@ -1461,7 +1458,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
-                                اطلب استشارة
+                                اطلب استشارّة
                             </button>
                         </div>
                     </div>
@@ -1477,7 +1474,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
-                                اطلب استشارة
+                                اطلب استشارّة
                             </button>
                         </div>
                     </div>
@@ -1492,7 +1489,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
-                                اطلب استشارة
+                                اطلب استشارّة
                             </button>
                         </div>
                     </div>
@@ -1506,7 +1503,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
-                                اطلب استشارة
+                                اطلب استشارّة
                             </button>
                         </div>
                     </div>
@@ -1520,7 +1517,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
-                                اطلب استشارة
+                                اطلب استشارّة
                             </button>
                         </div>
                     </div>
@@ -1534,7 +1531,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
-                                اطلب استشارة
+                                اطلب استشارّة
                             </button>
                         </div>
                     </div>
@@ -1548,7 +1545,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
-                                اطلب استشارة
+                                اطلب استشارّة
                             </button>
                         </div>
                     </div>
@@ -1562,7 +1559,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
-                                اطلب استشارة
+                                اطلب استشارّة
                             </button>
                         </div>
                     </div>
@@ -1576,7 +1573,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
-                                اطلب استشارة
+                                اطلب استشارّة
                             </button>
                         </div>
                     </div>
@@ -1590,7 +1587,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
-                                اطلب استشارة
+                                اطلب استشارّة
                             </button>
                         </div>
                     </div>
@@ -1604,7 +1601,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
-                                اطلب استشارة
+                                اطلب استشارّة
                             </button>
                         </div>
                     </div>
@@ -1618,7 +1615,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
-                                اطلب استشارة
+                                اطلب استشارّة
                             </button>
                         </div>
                     </div>
@@ -1632,8 +1629,8 @@
     <section id="planning">
         <div class="container">
             <h3 class="mb-5">منصة سلسلة لتخطيط الأعمال</h3>
-            <div class="row align-items-center gap-5">
-                <div class="col-md-6 col-12 h-100">
+            <div class="up">
+                <div class="imgs-container">
                     <div class="container-layer">
                         <img src="imgs/planning.webp">
                         <img src="imgs/planning.webp">
@@ -1641,7 +1638,7 @@
                         <img src="imgs/planning.webp">
                     </div>
                 </div>
-                <div class="col-md-5 col-12">
+                <div class="planning-content">
                     <p>كل ما تحتاجه لإنجاز وتخطيط أعمالك في منصة واحدة فقط، سارع وسجل في المنصة الآن لتحصل على كافة
                         المميزات المتاحة داخل
                         المنصة</p>
@@ -1866,16 +1863,16 @@
                                 <i class="fa fa-whatsapp"></i>
                             </a>
                             <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
-                                <i class="fa fa-linkedin-square"></i>
+                                <img src="imgs/icons/Linked-In.svg" alt="">
                             </a>
                             <a href="https://twitter.com/slsalah_sa" target="_blank">
-                                <i class="fa fa-twitter"></i>
+                                <img src="imgs/icons/icons8-twitterx 1.svg" alt="">
                             </a>
                             <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
-                                <i class="fa fa-facebook"></i>
+                                <img src="imgs/icons/Facebook.svg" alt="">
                             </a>
                             <a href="https://www.instagram.com/slsalah_sa" target="_blank">
-                                <i class="fa fa-instagram"></i>
+                                <img src="imgs/icons/Instagram.svg" alt="">
                             </a>
                         </div>
                     </div>
@@ -1952,13 +1949,13 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header justify-content-center">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">احجز استشارة</h1>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">احجز استشارّة</h1>
                 </div>
-                <div class="modal-body">
-                    <form class="row needs-validation" novalidate>
+                <div class="modal-body" style="width: 837px;">
+                    <form class="row needs-validation" novalidate style="width: 100%; margin: auto;">
                         <div class="col-12">
                             <label for="validationCustom01" class="form-label mb-0">
-                                الاسم كامل
+                                الاسم الكامل
                                 <svg xmlns="http://www.w3.org/2000/svg" height=".4em" viewBox="0 0 512 512">
                                     <style>
                                         svg {
@@ -1993,7 +1990,7 @@
                                 </svg>
                             </label>
                             <input type="text" class="form-control" id="validationCustom01" value=""
-                                placeholder="البلد, المدينة" required>
+                                placeholder="البلد، المدينة" required>
                             <div class="valid-feedback mt-2 ">
                                 ممتاز
                             </div>
@@ -2016,7 +2013,7 @@
                                 </svg>
                             </label>
                             <input type="text" class="form-control" id="validationCustom01" value=""
-                                placeholder="مطاعم, بنوك, مقاهي,...." required>
+                                placeholder="مطاعم، بنوك، مقاهي،...." required>
                             <div class="valid-feedback mt-2 ">
                                 ممتاز
                             </div>
@@ -2039,8 +2036,8 @@
                                 </svg>
                             </label>
                             <div class="flag-input">
-                                <input type="number" class="form-control" id="validationCustom01" value=""
-                                    placeholder="12345678952" required>
+                                <input style="text-align: left; padding-left: 60px;" type="number" class="form-control"
+                                    id="validationCustom01" value="" placeholder="12345678952" required>
                                 <img src="imgs/icons/Saudi-Arabia-Flag.png" class="img-fluid" alt="flag">
                             </div>
                             <div class="valid-feedback mt-2 ">
@@ -2064,8 +2061,8 @@
                                         d="M208 32c0-17.7 14.3-32 32-32h32c17.7 0 32 14.3 32 32V172.9l122-70.4c15.3-8.8 34.9-3.6 43.7 11.7l16 27.7c8.8 15.3 3.6 34.9-11.7 43.7L352 256l122 70.4c15.3 8.8 20.5 28.4 11.7 43.7l-16 27.7c-8.8 15.3-28.4 20.6-43.7 11.7L304 339.1V480c0 17.7-14.3 32-32 32H240c-17.7 0-32-14.3-32-32V339.1L86 409.6c-15.3 8.8-34.9 3.6-43.7-11.7l-16-27.7c-8.8-15.3-3.6-34.9 11.7-43.7L160 256 38 185.6c-15.3-8.8-20.5-28.4-11.7-43.7l16-27.7C51.1 98.8 70.7 93.6 86 102.4l122 70.4V32z" />
                                 </svg>
                             </label>
-                            <input type="email" class="form-control" id="validationCustom01" value=""
-                                placeholder="example@gmail.com" required>
+                            <input style="text-align: left; padding-left: 20px;" type="email" class="form-control"
+                                id="validationCustom01" value="" placeholder="example@gmail.com" required>
                             <div class="valid-feedback mt-2 ">
                                 ممتاز
                             </div>
@@ -2109,8 +2106,8 @@
                                         d="M208 32c0-17.7 14.3-32 32-32h32c17.7 0 32 14.3 32 32V172.9l122-70.4c15.3-8.8 34.9-3.6 43.7 11.7l16 27.7c8.8 15.3 3.6 34.9-11.7 43.7L352 256l122 70.4c15.3 8.8 20.5 28.4 11.7 43.7l-16 27.7c-8.8 15.3-28.4 20.6-43.7 11.7L304 339.1V480c0 17.7-14.3 32-32 32H240c-17.7 0-32-14.3-32-32V339.1L86 409.6c-15.3 8.8-34.9 3.6-43.7-11.7l-16-27.7c-8.8-15.3-3.6-34.9 11.7-43.7L160 256 38 185.6c-15.3-8.8-20.5-28.4-11.7-43.7l16-27.7C51.1 98.8 70.7 93.6 86 102.4l122 70.4V32z" />
                                 </svg>
                             </label>
-                            <input type="text" class="form-control" id="validationCustom01" value=""
-                                placeholder="نبذة عن الاستشارة المطلوبة" required>
+                            <textarea type="text" class="form-control" id="validationCustom01" value=""
+                                placeholder="نبذة عن الاستشارة المطلوبة" required></textarea>
                             <div class="valid-feedback mt-2 ">
                                 ممتاز
                             </div>
