--- a/blog.html
+++ b/blog.html
@@ -5,13 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=Lato&family=Tajawal:wght@400;500;700;800;900&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
-    <title>سلسلة - معرض الأعمال</title>
+    <title>سلسلة - المدونة</title>
 </head>
 
 <body>
@@ -62,8 +59,8 @@
                         aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="nav-link d-none d-lg-block" href="#testimonial">
-                        <button class="ask-request">اطلب استشارة</button>
+                    <a class="nav-link d-none d-lg-block" href="index.html#testimonial">
+                        <button class="ask-request">اطلب استشارّة</button>
                     </a>
                     <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                         <ul class="navbar-nav text-center py-4">
@@ -152,8 +149,8 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="contact-us.html">اتصل بنا</a>
                             </li>
-                            <a class="nav-link d-block d-lg-none" href="#testimonial">
-                                <button class="ask-request">اطلب استشارة</button>
+                            <a class="nav-link d-block d-lg-none" href="index.html#testimonial">
+                                <button class="ask-request">اطلب استشارّة</button>
                             </a>
                             <div
                                 class="col-md-6 text-start social-media-icons d-flex d-md-none justify-content-center align-items-center">
@@ -183,7 +180,7 @@
             </div>
         </div>
         <div class="headerContent">
-            <h1>المدونة</h1>
+            <h1>المدوّنة</h1>
         </div>
     </section>
 
@@ -204,7 +201,7 @@
             </div>
             <div class="main-block">
                 <div class="block">
-                    <div class="top d-flex align-items-end">
+                    <div class="top d-flex align-items-end one">
                         <button>تحليل</button>
                         <button>تسويق</button>
                     </div>
@@ -217,7 +214,7 @@
                     </div>
                 </div>
                 <div class="block">
-                    <div class="top d-flex align-items-end">
+                    <div class="top d-flex align-items-end two">
                         <button>تحليل</button>
                         <button>تسويق</button>
                     </div>
@@ -230,7 +227,7 @@
                     </div>
                 </div>
                 <div class="block">
-                    <div class="top d-flex align-items-end">
+                    <div class="top d-flex align-items-end three">
                         <button>تحليل</button>
                         <button>تسويق</button>
                     </div>
@@ -243,7 +240,85 @@
                     </div>
                 </div>
                 <div class="block">
-                    <div class="top d-flex align-items-end">
+                    <div class="top d-flex align-items-end four">
+                        <button>تحليل</button>
+                        <button>تسويق</button>
+                    </div>
+                    <div class="bottom">
+                        <h4>دراسة الجدوى الاقتصادية</h4>
+                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                            سيزود لاحقاً، هذا النص هو نص
+                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                        <a href="blog-info.html">اقرأ المزيد</a>
+                    </div>
+                </div>
+                <div class="block">
+                    <div class="top d-flex align-items-end five">
+                        <button>تحليل</button>
+                        <button>تسويق</button>
+                    </div>
+                    <div class="bottom">
+                        <h4>دراسة الجدوى الاقتصادية</h4>
+                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                            سيزود لاحقاً، هذا النص هو نص
+                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                        <a href="blog-info.html">اقرأ المزيد</a>
+                    </div>
+                </div>
+                <div class="block">
+                    <div class="top d-flex align-items-end six">
+                        <button>تحليل</button>
+                        <button>تسويق</button>
+                    </div>
+                    <div class="bottom">
+                        <h4>دراسة الجدوى الاقتصادية</h4>
+                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                            سيزود لاحقاً، هذا النص هو نص
+                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                        <a href="blog-info.html">اقرأ المزيد</a>
+                    </div>
+                </div>
+                <div class="block">
+                    <div class="top d-flex align-items-end seven">
+                        <button>تحليل</button>
+                        <button>تسويق</button>
+                    </div>
+                    <div class="bottom">
+                        <h4>دراسة الجدوى الاقتصادية</h4>
+                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                            سيزود لاحقاً، هذا النص هو نص
+                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                        <a href="blog-info.html">اقرأ المزيد</a>
+                    </div>
+                </div>
+                <div class="block">
+                    <div class="top d-flex align-items-end eight">
+                        <button>تحليل</button>
+                        <button>تسويق</button>
+                    </div>
+                    <div class="bottom">
+                        <h4>دراسة الجدوى الاقتصادية</h4>
+                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                            سيزود لاحقاً، هذا النص هو نص
+                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                        <a href="blog-info.html">اقرأ المزيد</a>
+                    </div>
+                </div>
+                <div class="block">
+                    <div class="top d-flex align-items-end nine">
+                        <button>تحليل</button>
+                        <button>تسويق</button>
+                    </div>
+                    <div class="bottom">
+                        <h4>دراسة الجدوى الاقتصادية</h4>
+                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                            سيزود لاحقاً، هذا النص هو نص
+                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                        <a href="blog-info.html">اقرأ المزيد</a>
+                    </div>
+                </div>
+                <div class="block">
+                    <div class="top d-flex align-items-end ten">
                         <button>تحليل</button>
                         <button>تسويق</button>
                     </div>
@@ -261,8 +336,8 @@
                 <h5>انـضـم لـنـشـرتـنـا الـبـريـديـة</h5>
                 <p>مقالات غنية بالمعلومات المفيدة</p>
                 <div>
-                    <input type="text" placeholder="البحث" class="form-control">
-                    <button>ابحث</button>
+                    <input type="text" placeholder="البريد الالكتروني" class="form-control">
+                    <button>سجل الآن</button>
                 </div>
             </div>
         </div>
@@ -281,16 +356,16 @@
                                 <i class="fa fa-whatsapp"></i>
                             </a>
                             <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
-                                <i class="fa fa-linkedin-square"></i>
+                                <img src="imgs/icons/Linked-In.svg" alt="">
                             </a>
                             <a href="https://twitter.com/slsalah_sa" target="_blank">
-                                <i class="fa fa-twitter"></i>
+                                <img src="imgs/icons/icons8-twitterx 1.svg" alt="">
                             </a>
                             <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
-                                <i class="fa fa-facebook"></i>
+                                <img src="imgs/icons/Facebook.svg" alt="">
                             </a>
                             <a href="https://www.instagram.com/slsalah_sa" target="_blank">
-                                <i class="fa fa-instagram"></i>
+                                <img src="imgs/icons/Instagram.svg" alt="">
                             </a>
                         </div>
                     </div>
@@ -329,12 +404,6 @@
                         <h4>تواصل معنا</h4>
                         <ul class="d-flex flex-column gy-5">
                             <li>
-                                <a href="mailto:contact@slsalah.com">
-                                    <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid icon">
-                                    <span>contact@slsalah.com</span>
-                                </a>
-                            </li>
-                            <li>
                                 <a href="tel:+966555881764">
                                     <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
                                     <span dir="ltr">+966 555 88 1764</span>
@@ -344,6 +413,12 @@
                                 <a href="tel:+966112074129">
                                     <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
                                     <span dir="ltr">+966 112 07 4129</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="mailto:contact@slsalah.com">
+                                    <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid icon">
+                                    <span>contact@slsalah.com</span>
                                 </a>
                             </li>
                             <li>
